hypothetical_transportation/frontend/src/components/adminPage/adminPage.css
.admin-row button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.search {
  z-index: 0;
  width: 100%;
  height: 40px;
}

.search .search-inner {
  z-index: 0;
  display: flex;
  justify-content: space-around;
  flex-flow: row wrap;
}
.search-inner .search-group label {
  font-size: 24px;
}
.search-inner .search-group:focus-within label {
  color: #ffae07;
}
.search .search-inner .search-group input:focus {
  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
}

.search .search-inner .search-group input {
  height: 40px;
}

.search button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  font-size: large;
  cursor: pointer;
  width: 150px;
  height: 40px;
}

.search button:hover {
  background-color: #ffdd99;
}

.adminTable-container button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.adminTable-container button:hover {
  background-color: #ffdd99;
}

.adminTable-container h1 {
  text-align: center;
}

.admin-edit-page {
  height: 150vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 100px;
}

.info-fields {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
}

.info-fields h2 {
  font-size: 30px;
  font-weight: bold;
}

.middle-justify {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.admin-details {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 200px;
  align-items: center;
  gap: 20px;
}

.page {
  width: 80%;
  height: 80%;
  background-color: #fff;
  height: auto;
  padding: 15px 30px;
  float: right;
}

.adminTable-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 1rem;
}

table {
  border-collapse: collapse;
  width: 100%;
}

.center {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

th,
td {
  border: 1px solid #ffffff;
  text-align: left;
  padding: 8px;
  font-size: 32px;
}

.tr-red {
  background-color: rgb(255, 55, 55);
}

.tr-red td {
  background-color: rgb(255, 55, 55);
}

.tr-gray {
  background-color: #d3d3d3;
}

th {
  background-color: #ffae07;
}

td {
  background-color: #d3d3d3;
}

.sidebar {
  height: 87%;
  width: 15%;
  position: absolute;
  left: 0;
  top: 13%;
  padding-top: 40px;
  background-color: rgb(148, 148, 148);
}

.sidebar button {
  display: inline-block;
  width: 100%;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #535353;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}
.sidebar .currentPage {
  background-color: #000000;
}
.sidebar button:hover {
  background-color: #b8b8b8;
}

.main-content {
  /* margin-left: auto;
    margin-right: auto; */
  /* width:85%;
    height:87%; */

  background-color: #fff;
}

.welcome {
  width: 100%;
  background-color: #fff;
}

.welcome h2 {
  color: #000;
  font-size: 32px;
  font-weight: 500;
  margin-bottom: 30px;
}

.welcome h3 {
  color: #888;
  font-size: 22px;
  font-weight: 500;
  margin-bottom: 30px;
}

.welcome h2 span {
  color: #fe4880;
  font-weight: 700;
}

.welcome button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.welcome button:hover {
  background-color: #ffdd99;
}

.home-buttons {
  display: flex;
  justify-content: center;
  gap: 15px;
}

.prev-next-buttons {
  display: flex;
  justify-content: center;
  gap: 15px;
}

.prev-next-buttons button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.prev-next-buttons button:hover {
  background-color: #ffdd99;
}

.table-and-buttons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.admin-edit-page button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.admin-edit-page button:hover {
  background-color: #ffdd99;
}

.edit-delete-buttons {
  display: flex;
  justify-content: center;
  gap: 200px;
}

.edit-delete-buttons button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.edit-delete-buttons button:hover {
  background-color: #ffdd99;
}

.button {
  display: inline-block;
  padding: 10px 15px;
  border-radius: 8px;
  background-color: #ffae07;
  background-size: 200%;
  background-position: 0%;
  transition: 0.4s;
  color: #fff;
  font-weight: 700;
  cursor: pointer;
}

.middle-content {
  margin-left: 200px;
}

